# Corewar

./: .gitignore  CMakeLists.txt  Makefile  README.md  op.h
asm/incs/: asm.h
asm/src/: main.c
asm/srcs/: main.c
asm_corewar/: Car.s  Makefile  car.cor
asm_corewar/include/: .op.h.swp  asm.h
asm_corewar/incs/: asm.h  op.h
asm_corewar/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_epurspace.c  ft_free_tab.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_max.c  ft_itoa_minus.c  ft_itoa_plus.c  ft_itoa_umax.c  ft_itoa_unsigned.c  ft_longtoi.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putinttab.c  ft_putnbr.c  ft_putnbr_c.c  ft_putnbr_fd.c  (+44 more)
asm_corewar/srcs/: calc_dist_label.c  check_header.c  check_inst.c  check_instruct.c  check_label.c  count_label_distance.c  count_label_distance_2.c  double_check_label.c  ft_check_label.c  ft_error.c  ft_free.c  ft_init.c  loop_header.c  (+7 more)
libft/: Makefile  auteur  ft_bzero.c  ft_is_prime.c  ft_isalnum.c  ft_lstadd.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memcpy.c  ft_memdel.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striter.c  ft_striteri.c  ft_strlen.c  ft_strmap.c  ft_strncpy.c  ft_strsub.c  ft_toupper.c  makefile
ressource/: valid_vm
vm/: Makefile  test.sh
(+249 files in other folders)
